Perf-o-matic build fix after r108917. I need a scrollbar in order see all the tests.
* Websites/webkit-perf.appspot.com/css/admin.css:
(html):


Canonical link: https://commits.webkit.org/96691@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108921 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Websites/webkit-perf.appspot.com/css/admin.css
+++ b/Websites/webkit-perf.appspot.com/css/admin.css
@@ -1,6 +1,7 @@
 html {
     padding: 0px;
     margin: 0px;
+    overflow: auto;
 }
 
 #summary {
